Fix TotalDebitCredit Overflow and add Failure Component

--- a/src/components/TotalCreditDebit/index.css
+++ b/src/components/TotalCreditDebit/index.css
@@ -1,14 +1,12 @@
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1050px) {
   .total-credit-debit {
-    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    overflow-x: auto;
   }
 }
 
-.credit-debit-loader {
+.credit-debit-loader-and-failure {
   display: flex;
   width: 100%;
   height: 168px;
@@ -33,7 +31,7 @@
   box-shadow: 0 0 10px #e1dfdf;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1050px) {
   .total-amount-card {
     width: 48%;
     padding: 24px 36px;
@@ -70,40 +68,4 @@
 .debit-image {
   width: 180px;
   height: 154px;
-}
-
-.failure-view {
-  display: flex;
-  width: 100%;
-  height: 168px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  background-color: #ffffff;
-  border-radius: 16px;
-  text-align: center;
-}
-
-.failure-msg {
-  color: #342d2e;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 0px;
-}
-
-.failure-button {
-  padding: 8px 16px;
-  border: solid 1px #8e8888;
-  background-color: #ffffff;
-  outline: none;
-  cursor: pointer;
-  border-radius: 3px;
-  color: #171f46;
-  font-family: HK Grotesk;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 24px;
-  margin-top: 16px;
 }
